--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment_movies"
         android:name="com.example.android.popularmovies.MainActivityFragment"
-        tools:layout="@layout/tab_fragment_1"
+        tools:layout="@layout/fragment_movies_list"
         android:layout_below="@+id/activity_my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
