--- a/app/src/main/res/menu/menu_fragment_main.xml
+++ b/app/src/main/res/menu/menu_fragment_main.xml
@@ -10,6 +10,10 @@
                     android:title="@string/action_sort_by_popularity" />
                 <item android:id="@+id/action_sort_by_rating"
                     android:title="@string/action_sort_by_rating" />
+                <item
+                    android:id="@+id/action_by_favorites"
+                    android:orderInCategory="10"
+                    android:title="@string/action_show_favorites"/>
 
             </group>
         </menu>
