--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -18,7 +18,7 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="com.muhammadfarag.popularmovies.details.DetailsActivityFragment">
+            tools:context="com.example.android.popularmovies.details.DetailsActivityFragment">
 
 
             <TextView
